--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.9",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "vite": "^2.6.4"
   },
   "devDependencies": {
     "@nrwl/cli": "13.4.3",
@@ -32,6 +33,7 @@
     "@nrwl/tao": "13.4.3",
     "@nrwl/web": "13.4.3",
     "@nrwl/workspace": "13.4.3",
+    "@nxext/vite": "^13.1.3",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/express": "4.17.13",
