--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^2.6.4"
   },
   "devDependencies": {
+    "@cypress/browserify-preprocessor": "^3.0.2",
     "@nrwl/cli": "13.4.3",
     "@nrwl/cypress": "13.4.3",
     "@nrwl/eslint-plugin-nx": "13.4.3",
@@ -44,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "~5.9.0",
     "@typescript-eslint/parser": "~5.9.0",
     "cypress": "^9.2.0",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "dependency-cruiser": "^11.2.1",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
