--- a/package.json
+++ b/package.json
@@ -18,22 +18,23 @@
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.9",
     "tslib": "^2.3.1",
-    "vite": "^2.6.4"
+    "vite": "^2.7.10"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^8.0.0-rc.2",
     "@cypress/browserify-preprocessor": "^3.0.2",
-    "@nrwl/cli": "13.4.3",
-    "@nrwl/cypress": "13.4.3",
-    "@nrwl/eslint-plugin-nx": "13.4.3",
-    "@nrwl/express": "13.4.3",
-    "@nrwl/jest": "13.4.3",
-    "@nrwl/linter": "13.4.3",
-    "@nrwl/node": "13.4.3",
+    "@nrwl/cli": "13.4.4",
+    "@nrwl/cypress": "13.4.4",
+    "@nrwl/eslint-plugin-nx": "13.4.4",
+    "@nrwl/express": "13.4.4",
+    "@nrwl/jest": "13.4.4",
+    "@nrwl/linter": "13.4.4",
+    "@nrwl/node": "13.4.4",
     "@nrwl/nx-cloud": "^13.0.2",
-    "@nrwl/react": "13.4.3",
-    "@nrwl/tao": "13.4.3",
-    "@nrwl/web": "13.4.3",
-    "@nrwl/workspace": "13.4.3",
+    "@nrwl/react": "13.4.4",
+    "@nrwl/tao": "13.4.4",
+    "@nrwl/web": "13.4.4",
+    "@nrwl/workspace": "13.4.4",
     "@nxext/vite": "^13.1.3",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
@@ -42,9 +43,10 @@
     "@types/node": "14.18.5",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
-    "@typescript-eslint/eslint-plugin": "~5.9.0",
-    "@typescript-eslint/parser": "~5.9.0",
-    "cypress": "^9.2.0",
+    "@typescript-eslint/eslint-plugin": "~5.9.1",
+    "@typescript-eslint/parser": "~5.9.1",
+    "add": "^2.0.6",
+    "cypress": "^9.2.1",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "dependency-cruiser": "^11.2.1",
     "eslint": "8.6.0",
@@ -55,12 +57,13 @@
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.4.7",
-    "nx": "^13.4.3",
+    "nx": "^13.4.4",
     "pm2": "^5.1.2",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.1.2",
-    "typescript": "~4.5.4"
+    "typescript": "~4.5.4",
+    "yarn": "^1.22.17"
   },
   "packageManager": "yarn@3.1.1"
 }
